--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -17,7 +17,7 @@ body {
   height: auto;
 }
 #sidebar-nav {
-  width: 20%;
+  width: 15%;
   height: 100%;
   padding:4px 0;
   border-right: 1px dashed #fff;
@@ -150,9 +150,9 @@ a:hover {
 #submitted-assignments:hover {
   color: greenyellow;
 }
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 992px) {
   #sidebar-nav{
-    width: 15%;
+    width: 20%;
   }
 }
 .mobilebar{
